[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/pause.png" type="Texture" id=1]
[ext_resource path="res://Clock/Clock.tscn" type="PackedScene" id=2]
[ext_resource path="res://NextButton/NextButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/count_white.png" type="Texture" id=5]
[ext_resource path="res://montserrat_extrabold.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0.266667, 0.192157, 0.2, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0.266667, 0.192157, 0.2, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 3
outline_color = Color( 0.266667, 0.192157, 0.2, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("DeliveredLabel:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("TimeLabel:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0.266667, 0.192157, 0.2, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PausedLabel:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PausedLabel:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = 690.0
margin_top = 544.0
margin_right = 1008.0
margin_bottom = 584.0
custom_fonts/font = SubResource( 1 )
text = "Amsterdam"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Person" type="Sprite" parent="."]
modulate = Color( 0.266667, 0.192157, 0.2, 1 )
position = Vector2( 28.83, 30 )
texture = ExtResource( 5 )

[node name="DeliveredLabel" type="Label" parent="."]
margin_left = 52.0
margin_top = 10.0
margin_right = 74.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 11, 21 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Day" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 468.0
margin_top = 10.0
margin_right = 556.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 11, 21 )
custom_fonts/font = SubResource( 3 )
text = "Day 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
margin_left = 850.0
margin_top = 10.0
margin_right = 969.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 46.6548, 23.1387 )
custom_fonts/font = SubResource( 2 )
text = "9 am"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AnimateDelivered = SubResource( 4 )
anims/AnimateTimeLabel = SubResource( 5 )

[node name="Clock" parent="." instance=ExtResource( 2 )]
position = Vector2( 987.258, 29.9169 )

[node name="PauseButton" parent="." instance=ExtResource( 3 )]
margin_left = 966.0
margin_top = 53.925
margin_right = 1010.0
margin_bottom = 95.925
rect_pivot_offset = Vector2( 22, 21 )
icon = ExtResource( 1 )

[node name="PausedLabel" type="Label" parent="."]
visible = false
margin_left = 956.813
margin_top = 97.4845
margin_right = 1019.81
margin_bottom = 118.485
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 31.5, 10.5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabelAnimation" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Appear = SubResource( 7 )
anims/Disappear = SubResource( 8 )
[connection signal="continue_clicked" from="PauseButton" to="." method="_on_PauseButton_clicked"]
[connection signal="animation_finished" from="PausedLabelAnimation" to="." method="_on_PausedLabelAnimation_animation_finished"]
